// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeComponent should compile 1`] = `
<ng-component
  articlesCount$={[Function Store]}
  atricles$={[Function Store]}
  currentTag$={[Function Store]}
  errorLoadingTags$={[Function Store]}
  limit$={[Function Store]}
  loadingArticles$={[Function Store]}
  loadingTags$={[Function Store]}
  locale$={[Function Store]}
  pageIndex$={[Function Store]}
  pageSizeOptions={[Function Array]}
  store={[Function Store]}
  tabs$={[Function Observable]}
  tags$={[Function Store]}
  translateService={[Function TranslateService]}
  type$={[Function Observable]}
>
  <section>
    
    <div
      class="banner text-center"
    >
      <div
        class="container"
      >
        <h1>
          conduit.home.baner.title
        </h1>
        <p>
          conduit.home.baner.caption.
        </p>
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-md-9 col-sm-12"
          >
            <app-content-tabs
              ng-reflect-tabs="[object Object],[object Object"
              ng-reflect-type="all"
            >
              <div
                id="tabs"
              >
                
              </div>
            </app-content-tabs>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="row flex-column-reverse flex-lg-row"
        >
          <div
            class="col-lg-9 col-sm-12"
          >
            <div
              class="articles"
            >
              <app-articles-list
                ng-reflect-articles-list=""
                ng-reflect-content-length="10"
                ng-reflect-is-loading="true"
                ng-reflect-locale=""
              >
                <div
                  id="favorite"
                />
              </app-articles-list>
            </div>
          </div>
          <div
            class="col-lg-3 col-sm-12"
          >
            <div
              class="tags-wtapper"
            >
              <app-tags
                ng-reflect-current-tag=""
                ng-reflect-is-error-loading="false"
                ng-reflect-is-loading="true"
                ng-reflect-tags=""
              >
                <div
                  id="selectTag"
                />
              </app-tags>
            </div>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-md-9 col-sm-12"
          >
            <mat-paginator
              ng-reflect-hidden="true"
              ng-reflect-length="0"
              ng-reflect-page-index="0"
              ng-reflect-page-size="10"
              ng-reflect-page-size-options="5,10,25,100"
              ng-reflect-show-first-last-buttons="true"
            >
              <div
                id="page"
              />
            </mat-paginator>
          </div>
        </div>
        <div
          class="pagination"
        />
      </div>
    </div>
  </section>
</ng-component>
`;

exports[`HomeComponent should hide banner for logged in user 1`] = `
<ng-component
  articlesCount$={[Function Store]}
  atricles$={[Function Store]}
  currentTag$={[Function Store]}
  errorLoadingTags$={[Function Store]}
  limit$={[Function Store]}
  loadingArticles$={[Function Store]}
  loadingTags$={[Function Store]}
  locale$={[Function Store]}
  pageIndex$={[Function Store]}
  pageSizeOptions={[Function Array]}
  store={[Function Store]}
  tabs$={[Function Observable]}
  tags$={[Function Store]}
  translateService={[Function TranslateService]}
  type$={[Function Observable]}
>
  <section>
    
    <div
      class="content"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-md-9 col-sm-12"
          >
            <app-content-tabs
              ng-reflect-tabs="[object Object],[object Object"
              ng-reflect-type="all"
            >
              <div
                id="tabs"
              >
                
              </div>
            </app-content-tabs>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="row flex-column-reverse flex-lg-row"
        >
          <div
            class="col-lg-9 col-sm-12"
          >
            <div
              class="articles"
            >
              <app-articles-list
                ng-reflect-articles-list=""
                ng-reflect-content-length="10"
                ng-reflect-is-loading="true"
                ng-reflect-locale=""
              >
                <div
                  id="favorite"
                />
              </app-articles-list>
            </div>
          </div>
          <div
            class="col-lg-3 col-sm-12"
          >
            <div
              class="tags-wtapper"
            >
              <app-tags
                ng-reflect-current-tag=""
                ng-reflect-is-error-loading="false"
                ng-reflect-is-loading="true"
                ng-reflect-tags=""
              >
                <div
                  id="selectTag"
                />
              </app-tags>
            </div>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-md-9 col-sm-12"
          >
            <mat-paginator
              ng-reflect-hidden="true"
              ng-reflect-length="0"
              ng-reflect-page-index="0"
              ng-reflect-page-size="10"
              ng-reflect-page-size-options="5,10,25,100"
              ng-reflect-show-first-last-buttons="true"
            >
              <div
                id="page"
              />
            </mat-paginator>
          </div>
        </div>
        <div
          class="pagination"
        />
      </div>
    </div>
  </section>
</ng-component>
`;

exports[`HomeComponent should show selected tag 1`] = `
<ng-component
  articlesCount$={[Function Store]}
  atricles$={[Function Store]}
  currentTag$={[Function Store]}
  errorLoadingTags$={[Function Store]}
  limit$={[Function Store]}
  loadingArticles$={[Function Store]}
  loadingTags$={[Function Store]}
  locale$={[Function Store]}
  pageIndex$={[Function Store]}
  pageSizeOptions={[Function Array]}
  store={[Function Store]}
  tabs$={[Function Observable]}
  tags$={[Function Store]}
  translateService={[Function TranslateService]}
  type$={[Function Observable]}
>
  <section>
    
    <div
      class="banner text-center"
    >
      <div
        class="container"
      >
        <h1>
          conduit.home.baner.title
        </h1>
        <p>
          conduit.home.baner.caption.
        </p>
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-md-9 col-sm-12"
          >
            <app-content-tabs
              ng-reflect-tabs="[object Object],[object Object"
              ng-reflect-type=""
            >
              <div
                id="tabs"
              >
                
                <mat-chip
                  color="primary"
                  selected=""
                >
                  #tag
                </mat-chip>
              </div>
            </app-content-tabs>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="row flex-column-reverse flex-lg-row"
        >
          <div
            class="col-lg-9 col-sm-12"
          >
            <div
              class="articles"
            >
              <app-articles-list
                ng-reflect-articles-list=""
                ng-reflect-content-length="10"
                ng-reflect-is-loading="true"
                ng-reflect-locale=""
              >
                <div
                  id="favorite"
                />
              </app-articles-list>
            </div>
          </div>
          <div
            class="col-lg-3 col-sm-12"
          >
            <div
              class="tags-wtapper"
            >
              <app-tags
                ng-reflect-current-tag="tag"
                ng-reflect-is-error-loading="false"
                ng-reflect-is-loading="true"
                ng-reflect-tags=""
              >
                <div
                  id="selectTag"
                />
              </app-tags>
            </div>
          </div>
        </div>
      </div>
      <div
        class="container"
      >
        <div
          class="row"
        >
          <div
            class="col-md-9 col-sm-12"
          >
            <mat-paginator
              ng-reflect-hidden="true"
              ng-reflect-length="0"
              ng-reflect-page-index="0"
              ng-reflect-page-size="10"
              ng-reflect-page-size-options="5,10,25,100"
              ng-reflect-show-first-last-buttons="true"
            >
              <div
                id="page"
              />
            </mat-paginator>
          </div>
        </div>
        <div
          class="pagination"
        />
      </div>
    </div>
  </section>
</ng-component>
`;
